实现自动总结生成会话标题